fix xpAndLevel vertical alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Denk+One&display=swap");
 
 body {
-  background: linear-gradient(
-    83deg,
-    rgba(102, 102, 102, 1) 0%,
-    rgba(152, 157, 103, 1) 48%,
-    rgba(38, 38, 38, 1) 100%
-  );
+  background: linear-gradient(83deg,
+      rgba(102, 102, 102, 1) 0%,
+      rgba(152, 157, 103, 1) 48%,
+      rgba(38, 38, 38, 1) 100%);
   color: rgb(220, 220, 220);
   font-family: "Denk One", sans-serif;
   border-radius: 4px;
@@ -39,6 +37,7 @@ button {
   color: #333;
   font-weight: bold;
 }
+
 .titleLogin {
   font-size: 20px;
 }
@@ -48,6 +47,7 @@ button {
   color: rgb(3, 3, 3);
   text-transform: uppercase;
 }
+
 .koodColor {
   font-weight: bold;
   color: rgb(179, 216, 30);
@@ -154,13 +154,11 @@ button {
   grid-row: 1;
   grid-column: 2;
   display: flex;
-  align-items: flex-end;
-  padding: 10px;
+  justify-content: space-evenly;
   font-size: 50px;
 }
 
 .boxDataCenter {
-  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -169,10 +167,6 @@ button {
   border-bottom: 5px solid #d8e845;
   border-radius: 14px;
   padding-bottom: 5px;
-}
-
-.boxDataCenter:not(:last-child) {
-  margin-right: 200px; /* Space to the right of the first boxData */
 }
 
 .label {
@@ -312,7 +306,8 @@ button {
   .dataToDisplay {
     border: 1px solid #d5e91e;
     background-color: #0000007a;
-    padding: 10px; /* Added more padding for better content separation */
+    padding: 10px;
+    /* Added more padding for better content separation */
     display: grid;
     justify-content: center;
     align-items: center;
@@ -321,8 +316,10 @@ button {
   }
 
   .boxDataCenter {
-    margin-bottom: 10px; /* Stack elements vertically */
-    border-bottom: 5px solid #d8e845; /* Border at the bottom */
+    margin-bottom: 10px;
+    /* Stack elements vertically */
+    border-bottom: 5px solid #d8e845;
+    /* Border at the bottom */
     border-radius: 14px;
     padding-bottom: 5px;
   }
@@ -335,34 +332,42 @@ button {
     font-size: 16px;
   }
 
-  .boxDataCenter:not(:last-child) {
-    margin-right: 25px;
-  }
-
   .barContainer {
-    width: 100%; /* Full width for better utilization of space */
+    width: 100%;
+    /* Full width for better utilization of space */
   }
 
   .auditTitle {
-    font-size: 18px; /* Adjusted font size */
-    margin-right: 10px; /* Reduced margin-right for better alignment */
+    font-size: 18px;
+    /* Adjusted font size */
+    margin-right: 10px;
+    /* Reduced margin-right for better alignment */
   }
 
   .auditRatio {
-    padding: 4px; /* Adjusted padding */
-    font-size: 10px; /* Adjusted font size */
+    padding: 4px;
+    /* Adjusted padding */
+    font-size: 10px;
+    /* Adjusted font size */
   }
 
   .logOutBtn {
-    width: auto; /* Auto width to fit content */
-    font-size: 14px; /* Adjusted font size */
-    padding: 8px; /* Added padding for better button appearance */
+    width: auto;
+    /* Auto width to fit content */
+    font-size: 14px;
+    /* Adjusted font size */
+    padding: 8px;
+    /* Added padding for better button appearance */
   }
 
   #navBarWelcomeName {
-    width: 75%; /* Full width to use available space */
-    font-size: 16px; /* Adjusted font size */
-    overflow-x: auto; /* Ensures text doesn't overflow */
-    text-align: center; /* Center-align text */
+    width: 75%;
+    /* Full width to use available space */
+    font-size: 16px;
+    /* Adjusted font size */
+    overflow-x: auto;
+    /* Ensures text doesn't overflow */
+    text-align: center;
+    /* Center-align text */
   }
 }
